i finished the html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,82 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">
+<img src="images/logo.png" alt="logopicture">
+            </div>
+            <div class="links">
+           <a href="#top">home</a>
+           <a href="#about">about</a>
+           <a href="#shoop">plants</a>
+           <a href="#contact">contacts</a>
+            </div>
+        </nav>
+    </header>
+    <section id="top" class="bg-img"> 
+        <div class="titles">
+            <h1>The watering can</h1>
+            <button>Shop Our Indoor Plant Sales</button>
+        </div>
+    </section>
+    <section id="about" class="bg-img">
+        <div>
+            <h2>Our Story</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Repudiandae tenetur harum ratione dignissimos. 
+                Iste beatae in quae tempore sit voluptates quibusdam 
+                voluptatem necessitatibus voluptas eligendi! Quae nisi neque accusamus voluptas!</p>
+        </div>
+    </section>
+    <section id="shop">
+        <h2>Our Plants</h2>
+        <div class="container">
+            <div class="bg-img succulents">
+                <div class="text">
+                    <div>
+                        <h3>Succulents</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam saepe ex eaque fugit in vel, accusamus beatae, nobis consequatur id exercitationem. Eligendi reprehenderit ex natus aut voluptatum, dolorum a similique?</p>
+                        <button>Shop Know</button>
+                        <div class="text">
+                           </div>
+                           </div>
+                            <div>
+                                <h3>Cacti</h3>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque ducimus suscipit, harum doloribus molestias quis magnam eum laborum incidunt pariatur aperiam dolorum facilis aliquam! Impedit eos delectus architecto beatae ullam.</p>
+                                <button>Shop Now!</button>
+                    </div>
+                </div>
+             <div class="bg-img cactus"></div>
+              <div class="bg-img tropicals"></div>
+              <div class="text">
+             </div>
+              <h3>Tropicals</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolore a at incidunt ab eligendi ipsam, qui inventore expedita voluptas rerum illum magni temporibus. Dolores quia temporibus amet architecto neque?</p>
+            <button>shop</button>
+            </div>
+        </div>
+    </section>
+    <footer id="contact">
+        <h2>Get in touch</h2>
+        <div class="left">
+         <h3>Find Us Here</h3>
+         <address>123 Plant Lane<br>Bloomfield Ontario<br>
+            Canada L2G 0x7
+            <a href="tel:+1-613-978-8282">613-978-8282</a>
+            <a href="mailto:info@thewateringcan.ca">info@thewateringcan.ca</a>
+            <p>@thewateringcan on the socials</p>
+        </address>
+        </div>
+        <div class="right">
+         <img src="images/shop.jpg" alt="inside the front of watring can">
+        </div>
+        <div class="bottom">
+            <p>&Copy copyright william velichko 2021</p>
+
+        </div>
+
+
+    </footer>
 </body>
 </html>
