--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--Add Google Fonts here-->
 
     <!--Link your stylesheet here-->
-
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 <body>
